feat: Update swagger and earlier return
