# docs/swagger.yaml
@@ -1,13 +1,13 @@
 definitions:
   requests.CreateLeaveRequest:
     properties:
-      end_time:
+      end_date:
         type: string
       leave_type:
         type: string
       reason:
         type: string
-      start_time:
+      start_date:
         type: string
     type: object
   requests.ReviewLeaveRequest:
@@ -174,6 +174,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/requests.ReviewLeaveRequest'
+      - description: Leave ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
