# internal/requests/leave.go
@@ -1,8 +1,8 @@
 package requests
 
 type CreateLeaveRequest struct {
-	StartDate CustomDate `json:"start_time"`
-	EndDate   CustomDate `json:"end_time"`
+	StartDate CustomDate `json:"start_date"`
+	EndDate   CustomDate `json:"end_date"`
 	LeaveType string     `json:"leave_type"`
 	Reason    string     `json:"reason"`
 }
